--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav class="topNav">
+        <nav class="topNav addedPadding">
             <ul>
                 <li class="fbLogo"><img src="../imgs/facebook-logo.svg"></li>
                 <li class="igLogo"><img src="../imgs/instagram-logo.svg"></li>
@@ -22,16 +22,68 @@
 
         <div class="landingPageWrapper">
 
-            <div class="headerCenterContent">
+            <div class="headerCenterContent addedPadding">
                 <nav class="headerNav">
                     <div class="headerLogo"><img src="./imgs/mountains.png"></div>
 
-                    <ul>
-                        <li>Who are we</li>
-                        <li>What are we doing</li>
-                        <li>Join now</li>
-                        <li>Media</li>
-                        <li>Contacts</li>
+                    <!-- <ul class="hamburgerMenu">
+                        <li class="openMenu menuItemOne">Who are we</li>
+                        <li class="openMenu menuItemTwo">What are we doing</li>
+                        <li class="openMenu menuItemThree">Join now</li>
+                        <li class="openMenu menuItemFour">Media</li>
+                        <li class="openMenu menuItemFour">Contact</li>
+                        <li class="openMenu menuItemFive"><img src="../imgs/search.svg"></li>
+                        <li>
+                            <div class="burgerMenu">
+                                <div class="hamburger-bar bar1"></div>
+                                <div class="hamburger-bar bar2"></div>
+                                <div class="hamburger-bar bar3"></div>
+                            </div>
+                    </li>
+                    </ul> -->
+
+                    <ul class="fullMenu" style="display: none">
+                        <li class="dropdown_one">Who are we
+
+                            <br><br>
+                            <ul class="dropdown_list one">
+                                <li>Mission</li>
+                                <li>Story</li>
+                                <li>Structure</li>
+                                <li>Employees</li>
+                                <li>Branches</li>
+                                <li>Partners</li>
+                            </ul>
+                        </li>
+                        <li class="dropdown_two">What are we doing
+                            <br><br>
+                            <ul class="dropdown_list two">
+                                <li>Calendar of events</li>
+                                <li>Activities</li>
+                                <li>Trails</li>
+                                <li>Camping</li>
+                            </ul>
+                        </li>
+                        <li class="dropdown_three">Join now
+                            <br><br>
+                            <ul class="dropdown_list three">
+                                <li>Athletes</li>
+                                <li>Volunteers</li>
+                                <li>Trainers</li>
+                                <li>History</li>
+                                <li>Donations</li>
+                            </ul>
+                        </li>
+                        <li class="dropdown_four">Media
+                            <br><br>
+                            <ul class="dropdown_list four">
+                                <li>News</li>
+                                <li>Photo gallery</li>
+                                <li>Video Library</li>
+                                <li>Mass media about us</li>
+                            </ul>
+                        </li>
+                        <li>Contacts <br><br></li>
                     </ul>
                 </nav>
 
@@ -48,7 +100,7 @@
                     <div class="visitImg"><!-- <img src="./imgs/snowmountain.jpeg"> --></div>
                     <div class="visitWords">
                         <h3>Best Places</h3>
-                        <h4>To visit <span><sup>____</sup></span></h4>
+                        <h4>To visit <span><sup>____ </sup></span></h4>
                     </div>
                 </div>
             </div>
@@ -56,7 +108,7 @@
         </div>
     </header>
 
-    <section class="centerInfo">
+    <section class="centerInfo addedPadding">
         <div class="centerWrapper">
 
             <div class="centerQuote">
@@ -132,7 +184,7 @@
         </div>
     </section>
 
-    <section class="statsSection">
+    <section class="statsSection ">
         <div class="statsWrapper">
             <div class="statsInfoWrapper">
 
@@ -189,7 +241,7 @@
     </section>
 
 
-    <footer>
+    <footer class="addedPadding">
 
         <div class="footerWrapper">
 
@@ -214,9 +266,9 @@
                 <ul>
                     <li class="title">WHAT ARE WE DOING</li>
                     <li>Calendar of events</li>
-                    <li>Kinds of sports</li>
-                    <li>NATR</li>
-                    <li>DA</li>
+                    <li>Activities</li>
+                    <li>Trails</li>
+                    <li>Camping</li>
                 </ul>
 
 
@@ -225,16 +277,14 @@
                     <li>Athletes</li>
                     <li>Volunteers</li>
                     <li>Trainers</li>
-                    <li>Families</li>
-                    <li>UNIFIDE</li>
-                    <li>The members</li>
+                    <li>History</li>
                     <li>Donations</li>
                 </ul>
 
                 <ul>
                     <li class="title">MEDIA</li>
                     <li>News</li>
-                    <li>Photo galleru</li>
+                    <li>Photo gallery</li>
                     <li>Video Library</li>
                     <li>Mass media about us</li>
                 </ul>
